# USBDongle-Example-for-Sentinel-Keys

./: .gitignore  README.md
001-example/: CMakeLists.txt  errorprinter.cpp  main.cpp
002-editedSample/: CMakeLists.txt
002-editedSample/application/: Core.cpp  Core.h  MainWindow.cpp  MainWindow.h  main.cpp
002-editedSample/uis/: MainWindow.ui
original-samples/: errorprinter.cpp  readme.html
